# basicDice

./: CMakeLists.txt  readme.md
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  threaddice.cpp  threaddice.h
